<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucko.osnovno.UpravljanjeKarticama" >
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1" >
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dip"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvKartica2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/naslov_kartice"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etNaslovKartice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/txtDodajDrugu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/slika"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnOdaberiSliku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oblik_dugmeta"
            android:text="@string/izaberi" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/zvuk"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnSnimiNaslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@drawable/oblik_dugmeta"
            android:layout_weight="1"
            android:text="@string/snimi" />

        <Button
            android:id="@+id/btnPustiNaslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oblik_dugmeta"
            android:layout_weight="1"
            android:text="@string/preslusaj" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnPregled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oblik_dugmeta"
            android:text="@string/pregled" />
        
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text=""
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnZapamti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oblik_dugmeta"
            android:text="@string/sacuvaj_lekciju" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1" >
    </TableRow>

</LinearLayout>