<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucko.osnovno.Uredjivanje"
    android:background="#000" >

    <TableRow
        android:id="@+id/tr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/tr11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

        <TableRow
            android:id="@+id/tr12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUrediLekciju"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uredi_lekciju"
                android:background="@drawable/oblik_dugmeta" />

        </TableRow>

        <TableRow
            android:id="@+id/tr13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/tr21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

        <TableRow
            android:id="@+id/tr22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUrediPitanje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uredi_pitanje"
                android:background="@drawable/oblik_dugmeta" />

        </TableRow>

        <TableRow
            android:id="@+id/tr23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

    </TableRow>
    
    <TableRow
        android:id="@+id/tr3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/tr31"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

        <TableRow
            android:id="@+id/tr32"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUrediKarticu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uredi_karticu"
                android:background="@drawable/oblik_dugmeta" />

        </TableRow>

        <TableRow
            android:id="@+id/tr33"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
        </TableRow>

    </TableRow>

</LinearLayout>
